--- a/README.html
+++ b/README.html
@@ -169,17 +169,18 @@ pre code {
 
 <div id="sta518-project-draft" class="section level1">
 <h1>STA518-PROJECT-DRAFT</h1>
+<p><strong>Authors:</strong> Moreen Owino and Beatrice Kemboi</p>
 <p><u><strong>An analysis on the overall best US states to live in based on various metric data from 2011 to 2021.</strong></u></p>
 <p><strong>Objectives:</strong></p>
+<p>1 ) Rank US states based on various metric data such as education, health care, crime rate, unemployment, infrastructure,economy, natural environment,opportunity,population density and fiscal stability,</p>
+<p>2 ) Analyze the rankings of these states with regard to the above metrics over a period of 10 years to draw various conclusions on the following:</p>
 <ul>
-<li><p>Rank US states based on various metric data such as education, health care, crime rate, unemployment, infrastructure,economy, natural environment,opportunity,population density and fiscal stability,</p></li>
-<li><p>Analyze the rankings of these states with regard to the above metrics over a period of 10 years to draw various conclusions on the following:</p></li>
+<li><p>Which states have consistently ranked top over the years hence best states to live in.</p></li>
+<li><p>Which states have improved their ranking over the years and what led to the improvement</p></li>
+<li><p>Based on the analysis ,try and predict which states will most likely continue to rank at the top based on their historical performance.</p></li>
+<li><p>Check whether there’s any correlation between population density and performance</p></li>
+<li><p>Find out the rate at which people have been moving in and out of particular states, and how that is related to its ranking.</p></li>
 </ul>
-<p>1.) Which states have consistently ranked top over the years hence best states to live in.</p>
-<p>2.) Which states have improved their ranking over the years and what led to the improvement</p>
-<p>3.) Based on the analysis ,try and predict which states will most likely continue to rank at the top based on their historical performance.</p>
-<p>4.) Check whether there’s any correlation between population density and performance</p>
-<p>5.) Find out the rate at which people have been moving in and out of particular states, and how that is related to its ranking.</p>
 <p><strong>Critical Review</strong></p>
 <p>Ranking of US states has been done for a long time almost every year by various sites for example usnews.com, worldpopulationreview.com,thrillist.com,wallethub.com etc and they all use different metric data to rank the states every year.No analysis of the rankings over a number of years has been done and hence the decision to carry out the project.The analysis will deal with only a number of key metric indicators and these will be used to attempt to answer various questions and draw conclusions.</p>
 <p>Some metrics such as weather(natural environment) are subjective as people have different preferences for what they consider is the best, so we will rank the states with and without these subjective factors to see if there’s any significant difference.</p>
