--- a/finalprojectdraft.html
+++ b/finalprojectdraft.html
@@ -168,7 +168,8 @@ pre code {
 
 
 <hr />
-<p>title: “finalprojectdraft_code” author: “Beatrice” date: “4/4/2022” output: html_document</p>
+<p>title: “finalprojectdraft_code” author: “Beatrice” date: “4/4/2022” output: Word</p>
+<pre class="r"><code>knitr::opts_chunk$set(echo = TRUE)</code></pre>
 <div id="r-markdown" class="section level2">
 <h2>R Markdown</h2>
 <pre class="r"><code>library(tidyverse)</code></pre>
